// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns PRG and BRQ suggestions 1`] = `
Array [
  Array [
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "prague_cz",
        "name": "Prague",
        "slug": "prague-czechia",
      },
      "country": null,
      "isActive": true,
      "location": Object {
        "lat": 50.100833,
        "lng": 14.26,
      },
      "locationId": "PRG",
      "name": "Václav Havel Airport Prague",
      "rank": 1,
      "slug": "vaclav-havel-airport-prague-prague-czechia",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "airport",
    },
    Object {
      "airportsCount": 1,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": null,
      "country": Object {
        "locationId": "CZ",
        "name": "Czechia",
        "slug": "czechia",
      },
      "isActive": true,
      "location": Object {
        "lat": 50.075538,
        "lng": 14.4378,
      },
      "locationId": "prague_cz",
      "name": "Prague",
      "rank": 1,
      "slug": "prague-czechia",
      "stationsCount": 0,
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "city",
    },
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "medina_sa",
        "name": "Medina",
        "slug": "medina-saudi-arabia",
      },
      "country": null,
      "isActive": true,
      "location": Object {
        "lat": 24.553333,
        "lng": 39.705,
      },
      "locationId": "MED",
      "name": "Prince Mohammad bin Abdulaziz",
      "rank": 17,
      "slug": "prince-mohammad-bin-abdulaziz-medina-saudi-arabia",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Asia/Riyadh",
      "type": "airport",
    },
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "pristina_xk",
        "name": "Pristina",
        "slug": "pristina-kosovo",
      },
      "country": null,
      "isActive": true,
      "location": Object {
        "lat": 42.572778,
        "lng": 21.035833,
      },
      "locationId": "PRN",
      "name": "Pristina International",
      "rank": 15,
      "slug": "pristina-international-pristina-kosovo",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Europe/Belgrade",
      "type": "airport",
    },
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "gassim_sa",
        "name": "Al-Qassim Region",
        "slug": "al-qassim-region-saudi-arabia",
      },
      "country": null,
      "isActive": true,
      "location": Object {
        "lat": 26.302778,
        "lng": 43.773889,
      },
      "locationId": "ELQ",
      "name": "Prince Nayef bin Abdulaziz Regional",
      "rank": 24,
      "slug": "prince-nayef-bin-abdulaziz-regional-al-qassim-region-saudi-arabia",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Asia/Riyadh",
      "type": "airport",
    },
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "barcelona_es",
        "name": "Barcelona",
        "slug": "barcelona-spain",
      },
      "country": null,
      "isActive": true,
      "location": Object {
        "lat": 41.296944,
        "lng": 2.078333,
      },
      "locationId": "BCN",
      "name": "Barcelona–El Prat",
      "rank": 0,
      "slug": "barcelona-el-prat-barcelona-spain",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Europe/Madrid",
      "type": "airport",
    },
  ],
  Array [
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "brno_cz",
        "name": "Brno",
        "slug": "brno-czechia",
      },
      "country": null,
      "isActive": true,
      "location": Object {
        "lat": 49.151389,
        "lng": 16.694444,
      },
      "locationId": "BRQ",
      "name": "Brno–Tuřany",
      "rank": 13,
      "slug": "brno-turany-brno-czechia",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "airport",
    },
    Object {
      "airportsCount": 1,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": null,
      "country": Object {
        "locationId": "CZ",
        "name": "Czechia",
        "slug": "czechia",
      },
      "isActive": true,
      "location": Object {
        "lat": 49.19506,
        "lng": 16.606837,
      },
      "locationId": "brno_cz",
      "name": "Brno",
      "rank": 13,
      "slug": "brno-czechia",
      "stationsCount": 0,
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "city",
    },
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "brussels_be",
        "name": "City of Brussels",
        "slug": "city-of-brussels-belgium",
      },
      "country": null,
      "isActive": true,
      "location": Object {
        "lat": 50.901389,
        "lng": 4.484444,
      },
      "locationId": "BRU",
      "name": "Brussels",
      "rank": 1,
      "slug": "brussels-city-of-brussels-belgium",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Europe/Brussels",
      "type": "airport",
    },
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "brisbane_ql_au",
        "name": "Brisbane",
        "slug": "brisbane-queensland-australia",
      },
      "country": null,
      "isActive": true,
      "location": Object {
        "lat": -27.384167,
        "lng": 153.1175,
      },
      "locationId": "BNE",
      "name": "Brisbane",
      "rank": 3,
      "slug": "brisbane-brisbane-queensland-australia",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Australia/Brisbane",
      "type": "airport",
    },
    Object {
      "airportsCount": 1,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": null,
      "country": Object {
        "locationId": "AU",
        "name": "Australia",
        "slug": "australia",
      },
      "isActive": true,
      "location": Object {
        "lat": -27.469771,
        "lng": 153.025124,
      },
      "locationId": "brisbane_ql_au",
      "name": "Brisbane",
      "rank": 3,
      "slug": "brisbane-queensland-australia",
      "stationsCount": 0,
      "subdivision": Object {
        "locationId": "QL_AU",
        "name": "Queensland",
        "slug": "queensland-australia",
      },
      "timezone": "Australia/Brisbane",
      "type": "city",
    },
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "bremen_de",
        "name": "Bremen",
        "slug": "bremen-germany",
      },
      "country": null,
      "isActive": true,
      "location": Object {
        "lat": 53.0475,
        "lng": 8.786667,
      },
      "locationId": "BRE",
      "name": "Bremen",
      "rank": 7,
      "slug": "bremen-bremen-germany",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Europe/Berlin",
      "type": "airport",
    },
  ],
]
`;

exports[`returns PRG suggestions 1`] = `
Array [
  Object {
    "airportsCount": undefined,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": Object {
      "locationId": "prague_cz",
      "name": "Prague",
      "slug": "prague-czechia",
    },
    "country": null,
    "isActive": true,
    "location": Object {
      "lat": 50.100833,
      "lng": 14.26,
    },
    "locationId": "PRG",
    "name": "Václav Havel Airport Prague",
    "rank": 1,
    "slug": "vaclav-havel-airport-prague-prague-czechia",
    "stationsCount": undefined,
    "subdivision": null,
    "timezone": "Europe/Prague",
    "type": "airport",
  },
  Object {
    "airportsCount": 1,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": null,
    "country": Object {
      "locationId": "CZ",
      "name": "Czechia",
      "slug": "czechia",
    },
    "isActive": true,
    "location": Object {
      "lat": 50.075538,
      "lng": 14.4378,
    },
    "locationId": "prague_cz",
    "name": "Prague",
    "rank": 1,
    "slug": "prague-czechia",
    "stationsCount": 0,
    "subdivision": null,
    "timezone": "Europe/Prague",
    "type": "city",
  },
  Object {
    "airportsCount": undefined,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": Object {
      "locationId": "medina_sa",
      "name": "Medina",
      "slug": "medina-saudi-arabia",
    },
    "country": null,
    "isActive": true,
    "location": Object {
      "lat": 24.553333,
      "lng": 39.705,
    },
    "locationId": "MED",
    "name": "Prince Mohammad bin Abdulaziz",
    "rank": 17,
    "slug": "prince-mohammad-bin-abdulaziz-medina-saudi-arabia",
    "stationsCount": undefined,
    "subdivision": null,
    "timezone": "Asia/Riyadh",
    "type": "airport",
  },
  Object {
    "airportsCount": undefined,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": Object {
      "locationId": "pristina_xk",
      "name": "Pristina",
      "slug": "pristina-kosovo",
    },
    "country": null,
    "isActive": true,
    "location": Object {
      "lat": 42.572778,
      "lng": 21.035833,
    },
    "locationId": "PRN",
    "name": "Pristina International",
    "rank": 15,
    "slug": "pristina-international-pristina-kosovo",
    "stationsCount": undefined,
    "subdivision": null,
    "timezone": "Europe/Belgrade",
    "type": "airport",
  },
  Object {
    "airportsCount": undefined,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": Object {
      "locationId": "gassim_sa",
      "name": "Al-Qassim Region",
      "slug": "al-qassim-region-saudi-arabia",
    },
    "country": null,
    "isActive": true,
    "location": Object {
      "lat": 26.302778,
      "lng": 43.773889,
    },
    "locationId": "ELQ",
    "name": "Prince Nayef bin Abdulaziz Regional",
    "rank": 24,
    "slug": "prince-nayef-bin-abdulaziz-regional-al-qassim-region-saudi-arabia",
    "stationsCount": undefined,
    "subdivision": null,
    "timezone": "Asia/Riyadh",
    "type": "airport",
  },
  Object {
    "airportsCount": undefined,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": Object {
      "locationId": "barcelona_es",
      "name": "Barcelona",
      "slug": "barcelona-spain",
    },
    "country": null,
    "isActive": true,
    "location": Object {
      "lat": 41.296944,
      "lng": 2.078333,
    },
    "locationId": "BCN",
    "name": "Barcelona–El Prat",
    "rank": 0,
    "slug": "barcelona-el-prat-barcelona-spain",
    "stationsCount": undefined,
    "subdivision": null,
    "timezone": "Europe/Madrid",
    "type": "airport",
  },
]
`;

exports[`returns PRG suggestions in cs-CZ 1`] = `
Array [
  Object {
    "airportsCount": 2,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": null,
    "country": Object {
      "locationId": "CZ",
      "name": "Česká republika",
      "slug": "ceska-republika",
    },
    "isActive": undefined,
    "location": Object {
      "lat": 50.0755381,
      "lng": 14.4378005,
    },
    "locationId": "prague_cz",
    "name": "Praha",
    "rank": 1,
    "slug": "praha-ceska-republika",
    "stationsCount": undefined,
    "subdivision": null,
    "timezone": "Europe/Prague",
    "type": "city",
  },
  Object {
    "airportsCount": undefined,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": Object {
      "locationId": "prague_cz",
      "name": "Praha",
      "slug": "praha-ceska-republika",
    },
    "country": null,
    "isActive": undefined,
    "location": Object {
      "lat": 50.1008333,
      "lng": 14.26,
    },
    "locationId": "PRG",
    "name": "Letiště Václava Havla Praha",
    "rank": 1,
    "slug": "letiste-vaclava-havla-praha-praha-ceska-republika",
    "stationsCount": undefined,
    "subdivision": null,
    "timezone": "Europe/Prague",
    "type": "airport",
  },
  Object {
    "airportsCount": 1,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": null,
    "country": Object {
      "locationId": "ID",
      "name": "Indonésie",
      "slug": "indonesie",
    },
    "isActive": undefined,
    "location": Object {
      "lat": -8.6837074,
      "lng": 116.2895173,
    },
    "locationId": "praya_id",
    "name": "Praya, Lombok",
    "rank": 21,
    "slug": "praya-indonesia",
    "stationsCount": undefined,
    "subdivision": null,
    "timezone": "Asia/Makassar",
    "type": "city",
  },
  Object {
    "airportsCount": undefined,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": Object {
      "locationId": "luang-prabang_la",
      "name": "Luang Prabang",
      "slug": "luang-prabang-laos",
    },
    "country": null,
    "isActive": undefined,
    "location": Object {
      "lat": 19.8977778,
      "lng": 102.160833,
    },
    "locationId": "LPQ",
    "name": "Luang Prabang International Airport",
    "rank": 17,
    "slug": "luang-prabang-international-airport-luang-prabang-laos",
    "stationsCount": undefined,
    "subdivision": null,
    "timezone": "Asia/Vientiane",
    "type": "airport",
  },
  Object {
    "airportsCount": 1,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": null,
    "country": Object {
      "locationId": "CV",
      "name": "Kapverdy",
      "slug": "kapverdy",
    },
    "isActive": undefined,
    "location": Object {
      "lat": 14.93305,
      "lng": -23.5133267,
    },
    "locationId": "praia_cv",
    "name": "Praia",
    "rank": 33,
    "slug": "praia-kapverdy",
    "stationsCount": undefined,
    "subdivision": null,
    "timezone": "Atlantic/Cape_Verde",
    "type": "city",
  },
  Object {
    "airportsCount": 1,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": null,
    "country": Object {
      "locationId": "LA",
      "name": "Laos",
      "slug": "laos",
    },
    "isActive": undefined,
    "location": Object {
      "lat": 19.8833959,
      "lng": 102.1346874,
    },
    "locationId": "luang-prabang_la",
    "name": "Luang Prabang",
    "rank": 24,
    "slug": "luang-prabang-laos",
    "stationsCount": undefined,
    "subdivision": null,
    "timezone": "Asia/Vientiane",
    "type": "city",
  },
  Object {
    "airportsCount": undefined,
    "alternativeNames": Array [],
    "autonomousTerritory": null,
    "city": Object {
      "locationId": "patna_in",
      "name": "Patna",
      "slug": "patna-indie",
    },
    "country": null,
    "isActive": undefined,
    "location": Object {
      "lat": 25.5913889,
      "lng": 85.0880556,
    },
    "locationId": "PAT",
    "name": "Jay Prakash Narayan International Airport",
    "rank": 31,
    "slug": "jay-prakash-narayan-international-airport-patna-indie",
    "stationsCount": undefined,
    "subdivision": null,
    "timezone": "Asia/Calcutta",
    "type": "airport",
  },
]
`;

exports[`returns many PRG suggestions in cs-CZ 1`] = `
Array [
  Array [
    Object {
      "airportsCount": 2,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": null,
      "country": Object {
        "locationId": "CZ",
        "name": "Česká republika",
        "slug": "ceska-republika",
      },
      "isActive": undefined,
      "location": Object {
        "lat": 50.0755381,
        "lng": 14.4378005,
      },
      "locationId": "prague_cz",
      "name": "Praha",
      "rank": 1,
      "slug": "praha-ceska-republika",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "city",
    },
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "prague_cz",
        "name": "Praha",
        "slug": "praha-ceska-republika",
      },
      "country": null,
      "isActive": undefined,
      "location": Object {
        "lat": 50.1008333,
        "lng": 14.26,
      },
      "locationId": "PRG",
      "name": "Letiště Václava Havla Praha",
      "rank": 1,
      "slug": "letiste-vaclava-havla-praha-praha-ceska-republika",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "airport",
    },
    Object {
      "airportsCount": 1,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": null,
      "country": Object {
        "locationId": "ID",
        "name": "Indonésie",
        "slug": "indonesie",
      },
      "isActive": undefined,
      "location": Object {
        "lat": -8.6837074,
        "lng": 116.2895173,
      },
      "locationId": "praya_id",
      "name": "Praya, Lombok",
      "rank": 21,
      "slug": "praya-indonesia",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Asia/Makassar",
      "type": "city",
    },
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "luang-prabang_la",
        "name": "Luang Prabang",
        "slug": "luang-prabang-laos",
      },
      "country": null,
      "isActive": undefined,
      "location": Object {
        "lat": 19.8977778,
        "lng": 102.160833,
      },
      "locationId": "LPQ",
      "name": "Luang Prabang International Airport",
      "rank": 17,
      "slug": "luang-prabang-international-airport-luang-prabang-laos",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Asia/Vientiane",
      "type": "airport",
    },
    Object {
      "airportsCount": 1,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": null,
      "country": Object {
        "locationId": "CV",
        "name": "Kapverdy",
        "slug": "kapverdy",
      },
      "isActive": undefined,
      "location": Object {
        "lat": 14.93305,
        "lng": -23.5133267,
      },
      "locationId": "praia_cv",
      "name": "Praia",
      "rank": 33,
      "slug": "praia-kapverdy",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Atlantic/Cape_Verde",
      "type": "city",
    },
    Object {
      "airportsCount": 1,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": null,
      "country": Object {
        "locationId": "LA",
        "name": "Laos",
        "slug": "laos",
      },
      "isActive": undefined,
      "location": Object {
        "lat": 19.8833959,
        "lng": 102.1346874,
      },
      "locationId": "luang-prabang_la",
      "name": "Luang Prabang",
      "rank": 24,
      "slug": "luang-prabang-laos",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Asia/Vientiane",
      "type": "city",
    },
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "patna_in",
        "name": "Patna",
        "slug": "patna-indie",
      },
      "country": null,
      "isActive": undefined,
      "location": Object {
        "lat": 25.5913889,
        "lng": 85.0880556,
      },
      "locationId": "PAT",
      "name": "Jay Prakash Narayan International Airport",
      "rank": 31,
      "slug": "jay-prakash-narayan-international-airport-patna-indie",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Asia/Calcutta",
      "type": "airport",
    },
  ],
  Array [
    Object {
      "airportsCount": 2,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": null,
      "country": Object {
        "locationId": "CZ",
        "name": "Česká republika",
        "slug": "ceska-republika",
      },
      "isActive": undefined,
      "location": Object {
        "lat": 50.0755381,
        "lng": 14.4378005,
      },
      "locationId": "prague_cz",
      "name": "Praha",
      "rank": 1,
      "slug": "praha-ceska-republika",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "city",
    },
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "prague_cz",
        "name": "Praha",
        "slug": "praha-ceska-republika",
      },
      "country": null,
      "isActive": undefined,
      "location": Object {
        "lat": 50.1008333,
        "lng": 14.26,
      },
      "locationId": "PRG",
      "name": "Letiště Václava Havla Praha",
      "rank": 1,
      "slug": "letiste-vaclava-havla-praha-praha-ceska-republika",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Europe/Prague",
      "type": "airport",
    },
    Object {
      "airportsCount": 1,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": null,
      "country": Object {
        "locationId": "ID",
        "name": "Indonésie",
        "slug": "indonesie",
      },
      "isActive": undefined,
      "location": Object {
        "lat": -8.6837074,
        "lng": 116.2895173,
      },
      "locationId": "praya_id",
      "name": "Praya, Lombok",
      "rank": 21,
      "slug": "praya-indonesia",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Asia/Makassar",
      "type": "city",
    },
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "luang-prabang_la",
        "name": "Luang Prabang",
        "slug": "luang-prabang-laos",
      },
      "country": null,
      "isActive": undefined,
      "location": Object {
        "lat": 19.8977778,
        "lng": 102.160833,
      },
      "locationId": "LPQ",
      "name": "Luang Prabang International Airport",
      "rank": 17,
      "slug": "luang-prabang-international-airport-luang-prabang-laos",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Asia/Vientiane",
      "type": "airport",
    },
    Object {
      "airportsCount": 1,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": null,
      "country": Object {
        "locationId": "CV",
        "name": "Kapverdy",
        "slug": "kapverdy",
      },
      "isActive": undefined,
      "location": Object {
        "lat": 14.93305,
        "lng": -23.5133267,
      },
      "locationId": "praia_cv",
      "name": "Praia",
      "rank": 33,
      "slug": "praia-kapverdy",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Atlantic/Cape_Verde",
      "type": "city",
    },
    Object {
      "airportsCount": 1,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": null,
      "country": Object {
        "locationId": "LA",
        "name": "Laos",
        "slug": "laos",
      },
      "isActive": undefined,
      "location": Object {
        "lat": 19.8833959,
        "lng": 102.1346874,
      },
      "locationId": "luang-prabang_la",
      "name": "Luang Prabang",
      "rank": 24,
      "slug": "luang-prabang-laos",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Asia/Vientiane",
      "type": "city",
    },
    Object {
      "airportsCount": undefined,
      "alternativeNames": Array [],
      "autonomousTerritory": null,
      "city": Object {
        "locationId": "patna_in",
        "name": "Patna",
        "slug": "patna-indie",
      },
      "country": null,
      "isActive": undefined,
      "location": Object {
        "lat": 25.5913889,
        "lng": 85.0880556,
      },
      "locationId": "PAT",
      "name": "Jay Prakash Narayan International Airport",
      "rank": 31,
      "slug": "jay-prakash-narayan-international-airport-patna-indie",
      "stationsCount": undefined,
      "subdivision": null,
      "timezone": "Asia/Calcutta",
      "type": "airport",
    },
  ],
]
`;
